[package]
name = "trigger_repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.1", features = [
  "bevy_asset",
  "bevy_render",
  "bevy_winit",
  "png",
  "x11",
  "ktx2",
  "zstd",
] }
leafwing-input-manager = { version = "0.10.0" }
